# Axum_todo_app

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/database/: prelude.rs
src/middleware/: require_auth.rs
src/routes/: hello_world.rs  mod.rs
src/routes/tasks/: create_task.rs  custom_extractor.rs  get_tasks.rs  mod.rs  update_tasks.rs
src/routes/users/: create_users.rs  login.rs  logout.rs  mod.rs
src/utilities/: app_error.rs  app_state.rs  hash.rs  jwt.rs  mod.rs  token_wrapper.rs
web-folder/: index.html
