[package]
name = "axum_todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5", features = ["macros"]}
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

# orm
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
bcrypt = "0.15.1"
